<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/pref_key_quick_settings_enabled"
        android:defaultValue="false"
        android:title="퀵계산 설정 사용" />


    <EditTextPreference
        android:key="@string/pref_key_quick_family"
        android:inputType="number"
        android:numeric="integer"
        android:dependency="@string/pref_key_quick_settings_enabled"
        android:defaultValue="1"
        android:summary="0"
        android:singleLine="true"
        android:title="부양가족수" />

    <EditTextPreference
        android:key="@string/pref_key_quick_child"
        android:inputType="number"
        android:numeric="integer"
        android:dependency="@string/pref_key_quick_settings_enabled"
        android:defaultValue="0"
        android:selectAllOnFocus="true"
        android:summary="0"
        android:singleLine="true"
        android:title="20세 이하 자녀수" />

    <EditTextPreference
        android:key="@string/pref_key_quick_tax_exemption"
        android:inputType="number"
        android:numeric="integer"
        android:dependency="@string/pref_key_quick_settings_enabled"
        android:defaultValue="100000"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:summary="0"
        android:singleLine="true"
        android:title="비과세액" />

    <SwitchPreference
        android:key="@string/pref_key_quick_severance"
        android:dependency="@string/pref_key_quick_settings_enabled"
        android:defaultValue="false"
        android:title="퇴직금 포함여부" />
</PreferenceScreen>
