<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.asv.apps.salarytax.fragments.TaxCalculatorFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/label_monthly_input" />

        <EditText
            android:id="@+id/id_input_salary"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp"
            android:text="@string/value_default_number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/label_taxfree" />

        <EditText
            android:id="@+id/id_input_taxfree"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp"
            android:text="@string/value_default_number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/label_national_pension" />

        <EditText
            android:id="@+id/id_input_national"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp"
            android:text="@string/value_default_number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/label_health_care" />

        <EditText
            android:id="@+id/id_input_healthcare"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp"
            android:text="@string/value_default_number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/label_longterm_care" />

        <EditText
            android:id="@+id/id_input_longtermcare"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp"
            android:text="@string/value_default_number" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/label_employee_care" />

        <EditText
            android:id="@+id/id_input_employmentcare"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="30sp"
            android:text="@string/value_default_number" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/id_btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textStyle="bold" />
</LinearLayout>
