<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--suppress XmlUnusedNamespaceDeclaration -->

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="kr.asv.salarycalculator.app.fragments.report.ReportInsuranceFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national_pension"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/info_national_pension"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/default_string"
                android:src="@android:drawable/ic_menu_info_details" />

        </LinearLayout>

        <TextView
            android:id="@+id/national_pension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_care"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/info_health_care"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/default_string"
                android:src="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <TextView
            android:id="@+id/health_care"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longterm_care"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/info_long_term_care"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/default_string"
                android:src="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <TextView
            android:id="@+id/long_term_care"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_care"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/info_employment_care"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/default_string"
                android:src="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <TextView
            android:id="@+id/employment_care"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>